# KML-ILMNFQC

./: README.md  pyproject.toml
src/kml_ilmnfqc/: __main__.py  cli.py  config.py  fastp.py  fastqc.py  multiqc.py  sample.py  stats.py  util.py
tests/: test_fastp.py  test_fastqc.py  test_multiqc.py  test_sample.py  test_stats.py  test_util.py
